--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Jackson's Design and Creative Projects
+email: jbhammon@umich.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hi! I'm Jackson Hammond, Healthcare IT Professional with a passion for
+  excellent design. Here is where I'll be posting updates about creative projects
+  I'm spending my spare time on. I hope you enjoy!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  jbhammon
 
 # Build settings
 markdown: kramdown
