--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: HammondDesign
+title: Jackson Hammond
 email: jbhammon@umich.edu
 description: > # this means to ignore newlines until "baseurl:"
   Hi! I'm Jackson Hammond, Healthcare IT Professional with a passion for
